# opthash

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
benches/: README.md  benchmarks.rs  common.rs  internal_paths.rs  latency.rs  profile_bindings.py  python.py  python_throughput.py  speedup.rs  test_python.py  throughput.rs
opthash/: __init__.py
opthash-internal/: Cargo.toml
opthash-internal/src/: lib.rs
opthash/opthash/: __init__.pyi
paper/: main.bbl  main.tex
scripts/: bench.sh  generate_all_charts.py  generate_latency_chart.py  generate_python_chart.py  generate_speedup_chart.py  plot_common.py
src/: common.rs  elastic.rs  funnel.rs  lib.rs  python.rs
src/common/: bitmask.rs  config.rs  control.rs  layout.rs  math.rs  mod.rs  simd.rs
tests/: conftest.py  test_dict_api.py  test_options.py  test_parity.py  test_smoke.py
