[package]
name = "opthash"
version = "0.3.0"
edition = "2024"
description = "Rust implementations of Elastic Hashing and Funnel Hashing"
readme = "README.md"
repository = "https://github.com/aaron-ang/opthash"
license = "MIT OR Apache-2.0"
keywords = ["hashmap", "open_addressing", "elastic_hashing", "funnel_hashing"]
categories = ["algorithms", "data-structures"]
exclude = [
    "/benches/",
    "/paper/",
    "/scripts/",
    "/.gitattributes",
    "/.gitignore",
    "/AGENTS.md",
    "/CLAUDE.md",
    "/requirements.txt",
]

[dependencies]
foldhash = "0.2"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
hashbrown = "0.17"
hdrhistogram = "7.5"
pprof = { version = "0.15", features = ["flamegraph"] }

[[bench]]
name = "speedup"
harness = false

[[bench]]
name = "latency"
harness = false
