[package]
name = "opthash"
version = "0.4.1"
edition = "2024"
description = "Rust implementations of Elastic Hashing and Funnel Hashing"
readme = "README.md"
repository = "https://github.com/aaron-ang/opthash"
license = "Apache-2.0"
keywords = ["hashmap", "open_addressing", "elastic_hashing", "funnel_hashing"]
categories = ["algorithms", "data-structures"]
exclude = [
    "/benches/",
    "/opthash/",
    "/paper/",
    "/scripts/",
    "/tests/",
    "/.gitattributes",
    "/.gitignore",
    "/AGENTS.md",
    "/CLAUDE.md",
    "/requirements.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# Per-slot 4-byte mini-hash sidecar. Drops fingerprint false-positive rate
# from ~1/128 to ~1/2^32, gating expensive `K::eq` calls (e.g. Python
# `HashedAny::eq` which crosses the GIL). Off by default — pure-Rust callers
# with cheap-eq keys (`u64`, `i32`) don't pay the 4 B/slot memory tax or the
# extra cache-line touch on every fingerprint match. Auto-enabled by the
# `python` feature.
mini-hash = []
python = ["dep:pyo3", "mini-hash"]

[dependencies]
foldhash = "0.2"
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py310"], optional = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
hashbrown = "0.17"
hdrhistogram = "7.5"
pprof = { version = "0.15", features = ["flamegraph"] }

[[bench]]
name = "speedup"
harness = false

[[bench]]
name = "latency"
harness = false
